fix z-index of menu dropdown

--- a/_1327/static/less/1327.less
+++ b/_1327/static/less/1327.less
@@ -171,6 +171,9 @@ div#wrapper {
 .dropdown:hover .dropdown-menu {
 	display: block;
 }
+.dropdown {
+	z-index: 999999;
+}
 .menu-level-2 {
 	min-width: 100%;
 }
